# MyFirstRepository

./: README.md  ネットワーク.xlsx
AutomaticLocalization/: CMakeLists.txt
AutomaticLocalization/Code/AutomaticLocalization/: AutomaticLocalization.cxx  EvaluateDistance.cxx
AutomaticLocalization/Code/BackUpFiles/AutomaticLocalization[201408270640]/: CMakeLists.txt  FunctionDefinition.h  MergedPointDataViewer.cxx  OptimizationWithICP.cxx
AutomaticLocalization/Code/BackUpFiles/AutomaticLocalization[201408271300]…ICP,OpenMP実装/: AutomaticLocalization.cxx  FunctionDefinition.h
AutomaticLocalization/Code/BackUpFiles/AutomaticLocalization[201409041840]…エラー有/: Configuration.h  CreateDistanceField.cxx  ExhaustiveSearch.cxx  OptimizationWithLevMar.cxx
AutomaticLocalization/Code/BackUpFiles/AutomaticLocalization[201409171700]…Marquart構築中/: Configuration.h  ConvertRodrigues.cxx  CreateDistanceField.cxx  ExhaustiveSearch.cxx  PartialDerivativeForRodrigues.cxx
AutomaticLocalization/Code/BackUpFiles/AutomaticLocalization[201412150000]…ピラミッド探索実装前/: ConvertRodrigues.cxx  PointCloudViewer.cxx
AutomaticLocalization/Code/ConvertCSVtoMHA/: ConvertCSVtoMHA.cxx
AutomaticLocalization/Code/ConvertPCDtoPLY/: LoadPointCloud.cxx  SavePointCloud.cxx
AutomaticLocalization/Code/Generate2DSliceImage/: Convert3DImageTo2DImages.cxx
AutomaticLocalization/Code/GenerateMultiResolutionalVolumeData/: GenerateMultiResolutionalVolumeData.cxx
AutomaticLocalization/Code/GenerateNoisyPointCloud/: PointCloudViewer.cxx
AutomaticLocalization/Code/GenerateSurfaceMeshData/: MarchingCubes.cxx
AutomaticLocalization/Code/LevenbergMarquardt/: CoordinateTransformation.cxx  FunctionDefinition.h
AutomaticLocalization/Code/PointCloudReduction/: FunctionDefinition.h  PointCloudReduction.cxx  PointCloudReductor.cxx
AutomaticLocalization/Code/PrincipalComponentAnalysis/: Configuration.h  PrincipalComponentAnalysis.cxx
AutomaticLocalization/Code/TransformPointCloud/: Configuration.h  PointCloudViewer.cxx
AutomaticLocalization/Code/UniformSamplingOnSO3Viewer/: UniformSamplingOnSO3Viewer.cxx
AutomaticLocalization20150101/Code/AutomaticLocalization/: Configuration.h  FunctionDefinition.h  OptimizationWithICP.cxx  PartialDerivativeForRodrigues.cxx
AutomaticLocalization20150101/Code/BackUpFiles/AutomaticLocalization[201408270640]/: AutomaticLocalization.cxx  Configuration.h  ExhaustiveSearch.cxx  PointCloudViewer.cxx
AutomaticLocalization20150101/Code/BackUpFiles/AutomaticLocalization[201408271300]…ICP,OpenMP実装/: Configuration.h  ExhaustiveSearch.cxx  SavePointCloud.cxx
AutomaticLocalization20150101/Code/BackUpFiles/AutomaticLocalization[201409041840]…エラー有/: AutomaticLocalization.cxx  BinarizeDistanceField.cxx  FunctionDefinition.h  MergedPointDataViewer.cxx  OptimizationWithICP.cxx
AutomaticLocalization20150101/Code/BackUpFiles/AutomaticLocalization[201409171700]…Marquart構築中/: AutomaticLocalization.cxx  BinarizeDistanceField.cxx  FunctionDefinition.h  OptimizationWithICP.cxx  OptimizationWithLevMar.cxx
AutomaticLocalization20150101/Code/BackUpFiles/AutomaticLocalization[201412150000]…ピラミッド探索実装前/: AutomaticLocalization.cxx  ExhaustiveSearch.cxx  OptimizationWithLevMar.cxx
AutomaticLocalization20150101/Code/CPDistanceVisualization/: Configuration.h  CreateHistogram.cxx
AutomaticLocalization20150101/Code/CannyEdgeDetection/: CannyEdgeDetection.cxx  Configuration.h  FunctionDefinition.h  PointCloudReduction.cxx  SavePointCloud.cxx
AutomaticLocalization20150101/Code/ConvertPCDtoPLY/: ConvertPCDtoPLY.cxx  FunctionDefinition.h
AutomaticLocalization20150101/Code/GenerateMultiResolutionalVolumeData/: Configuration.h
AutomaticLocalization20150101/Code/GenerateNoisyPointCloud/: Configuration.h  GenerateNoisyPointCloud.cxx
AutomaticLocalization20150101/Code/GenerateSurfaceMeshData/: Configuration.h
AutomaticLocalization20150101/Code/LevenbergMarquardt/: Configuration.h  ConvertRodrigues.cxx  LevenbergMarquardt.cxx  PartialDerivativeForRodrigues.cxx  ReconstructRFromRodrigues.cxx
AutomaticLocalization20150101/Code/PlusGaussianNoiseToPointCloud/: Configuration.h  FunctionDefinition.h  PlusGaussianNoise.cxx
AutomaticLocalization20150101/Code/PointCloudReduction/: LoadPointCloud.cxx
AutomaticLocalization20150101/Code/PointCloudViewer/: PointCloudViewer.cxx
AutomaticLocalization20150101/Code/TransformPointCloud/: FunctionDefinition.h  TransformPointCloud.cxx
AutomaticLocalization20150101/Code/UniformSamplingOnSO3/: UniformSamplingOnSO3.cxx  find_point.cxx  hopf2quat.cxx  mk_pix2xy.cxx  pix2ang_nest.cxx  so3_sequence.h
